<resources>
    <string name="app_name">DRIPLIT</string>
    <string name="fullname">FULLNAME</string>
    <string name="password">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="welcome">WELCOME</string>
    <string name="phonenumber">PHONE NUMBER</string>
    <string name="confirm">CONFIRM PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_fodscreen">FODScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_menu_tab">MenuTab</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab_menu">Menu</string>
    <string name="record_intake">Record Intake</string>
    <string name="tab_text_2">Tips</string>
    <string name="tab_text_3">Edit Profile</string>
    <string name="report_leak">Report Leak</string>
    <string name="tricks_tips">Tips and Tricks</string>
    <string name="tipoftheday">Tip Of The Day</string>
    <string name="intake_trend">Intake Trend</string>
    <string name="trend">Trends</string>
    <string name="home">Home</string>
    <string name="chart_label">Weeks</string>
    <string name="show_more">">"</string>
    <string name="report_leak_instruct">Make Sure You Are Where The Leak Is. \n Click The Button Above To Report Leak\n\n Make Sure Your Location Is Turned On.</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="email">EMAIL</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="error_star">*</string>
    <string name="litre">l</string>
    <string name="usage_values">0.0</string>
    <string name="times_used">Times Used:</string>
    <string name="dash">-</string>
    <string name="_0">0</string>
    <string name="increment">+</string>
    <string name="record_successful">Record successful</string>
    <string name="undo">Undo</string>
    <string name="edit">Edit</string>
    <string name="item_name">Item Name</string>
    <string name="loginpassword">password</string>
    <string name="username">codecentrix</string>
    <string name="litres_used_today">Litres used today</string>
    <string name="todo">TODO</string>
    <string name="record">Record</string>
    <string name="login_error">You have entered an invalid email or password</string>
    <string name="connectionString">jdbc:jtds:sqlserver://sict-sql.nmmu.ac.za:1433/Codecentrix</string>
    <string name="help">Help</string>
    <string name="about_us">About us</string>
    <string name="sing_out">Sign out</string>
    <string name="new_password">New password (optional)</string>
    <string name="old_password">Old password</string>
    <string name="enter_tip">Enter tip</string>
    <string name="tip_trick_description">Tip Trick Description</string>
    <string name="posted_by">By: </string>
    <string name="name">Name</string>
    <string name="date">Date:</string>
    <string name="post">POST</string>
    <string name="remember_me">Remember me</string>
    <string name="Business_name">codeinecentrix</string>
    <string name="we_are_codeinecentrix">We are codeinecentrix.\n
    With our Water Saving and Awareness system we aim to educate and make the public aware of the water crisis that we are facing.\n
    By doing this we can play our part in ensuring that we do not run out of water.</string>
    <string name="how_report_leak">How to report leak</string>
    <string name="select_day">select day</string>
    <string name="item_trend">Trends</string>
    <string name="leak_successfully_reported_at">Leak successfully reported at:</string>
    <string name="address">address</string>
    <string name="title_activity_edit">Edit</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="retry">ReTry</string>
    <string name="connection_error">No WIFI connection</string>
    <string name="title_activity_register2">Register</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="flushing_5_times_uses_55_litres">Flushing 5 times uses 55 litres!</string>
    <string name="title_activity_intake_helper">IntakeHelper</string>
    <string name="title_activity_intake_trend_scroller">IntakeTrendScroller</string>
    <string name="the_bar_trend_info">The bar graph shows you 5 bars that have been recently been recorded, you can drag the graph to see other old bars you have recorded </string>
    <string name="the_line_graph">The line graph shows you all the water usage records giving you the bigger picture</string>
    <string name="item_graph">This bar graph shows you how much water you used on a selected day, by default it will show today\'s usage </string>
    <string name="no_water_usage">No water Usage</string>
    <string name="click_the_record_inttake_button">Click the Record Inttake button</string>
    <string name="click_on_one_item_you_used_for_the_day">Click on one item you used for the day</string>
    <string name="you_can_see_the_total_usage_of_the_day_and_the_total_usage_of_that_specific_item_when_you_click_it">You can see the total usage of the day and the total usage of that specific item when you click it</string>
    <string name="after_you_click_record_button_you_will_see_the_total_usage_of_today_at_the_bottom_you_can_also_click_undo_with_in_3_seconds">After you click record button you will see the total usage of today at the bottom you can also click undo with in 3 seconds</string>
    <string name="on_your_left_you_will_see_the_average_used">On your left you will see the average used</string>
    <string name="use_the_buttons_to_add_or_minus_the_number_of_times_you_the_item">use the buttons to add or minus the number of times you the item</string>
    <string name="location">Location:</string>
    <string name="reported">Reported</string>
    <string name="leak_image">Leak Image</string>
    <string name="heading">HEADING</string>
</resources>