<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="Leak">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_reportedLeaks"
                    android:title="Reported Leaks"
                    />
                <item
                    android:id="@+id/nav_leaderBoard"
                    android:title="Snitch Board"/>
            </group>
        </menu>
    </item>
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_aboutus"
            android:title="@string/about_us"/>
        <item android:id="@+id/nav_help"
            android:title="@string/help"/>
        <item
            android:id="@+id/nav_signout"
            android:title="@string/sing_out" />
    </group>

</menu>
