<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otherbg"
    android:orientation="vertical"
    tools:context="com.example.s215131746.driplit.Register">

    <LinearLayout
        android:id="@+id/head"
        android:layout_width="309dp"

        android:layout_height="214dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/logohead"
        android:orientation="vertical" />


    <EditText
        android:id="@+id/txtRegUsername"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="13dp"
        android:drawableLeft="@drawable/user"
        android:hint="@string/username"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/txtPhonenumber"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="13dp"
        android:drawableLeft="@drawable/phone"
        android:hint="@string/phonenumber"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/txtRegPassword"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="13dp"
        android:drawableLeft="@drawable/padlock"
        android:hint="@string/password"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/txtConfirmPass"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="13dp"
        android:drawableLeft="@drawable/padlock"
        android:hint="@string/confirm"
        android:textAlignment="center" />

    <Button
        android:layout_width="275dp"
        android:layout_height="47dp"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="25dp"
        android:background="@color/darkerblue"
        android:text="@string/register"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/footer"
        android:layout_marginTop="30dp"/>
</LinearLayout>
