<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/otherbg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.s215131746.driplit.Login">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="286dp"
        android:layout_height="214dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/logohead" />


    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/user"
        android:drawableStart="@drawable/user"
        android:hint="@string/email"
        android:textAlignment="center"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@color/blue"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawableEnd="@drawable/help"
        android:drawableLeft="@drawable/padlock"
        android:drawableRight="@drawable/help"
        android:drawableStart="@drawable/padlock"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textCursorDrawable="@color/darkerblue"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="286dp"
        android:layout_height="47dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@color/blue"
        android:onClick="ToFODScreen"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/lblAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="22sp" />

    <Button
        android:id="@+id/lnkRegister"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:background="@android:color/transparent"
        android:onClick="ToRegisterScreen"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="60dp"
        android:background="@drawable/footer" />


</LinearLayout>


