<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/imgItemIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        app:srcCompat="@mipmap/ic_launcher_round" android:contentDescription="@string/todo" />

    <LinearLayout

        android:id="@+id/loDropHide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imgItemIcon"
        android:layout_alignStart="@+id/imgItemIcon"
        android:layout_below="@+id/imgItemIcon"
        android:background="@color/blue"
        android:backgroundTint="@color/blue"
        android:orientation="vertical" tools:targetApi="lollipop">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/times_used"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="9dp"
                android:layout_height="31dp"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:paddingBottom="1dp"
                android:paddingEnd="1dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingStart="1dp"
                android:paddingTop="1dp"
                android:text="@string/dash"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/tvQty"
                android:layout_width="13dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="9dp"
                android:layout_height="33dp"
                android:layout_marginBottom="1dp"
                android:layout_marginEnd="1dp"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:text="@string/increment"
                android:textColor="@color/black" />

            <EditText

                android:id="@+id/txtItemUsage"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvUnit"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="cursive"
                android:text="@string/litre"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button

                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:text="@string/done"
                android:textColor="@android:color/black" />

            <Button

                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_weight="1"
                android:background="@android:color/darker_gray"
                android:text="@string/edit"
                android:textColor="@color/black" android:layout_marginStart="0dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loDropHide"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_toEndOf="@+id/imgItemIcon"
        android:layout_toRightOf="@+id/imgItemIcon"
        android:text="@string/item_name"
        android:textSize="24sp" />

</RelativeLayout>