<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.s215131746.driplit.TabMenu">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:theme="@style/AppTheme.AppBarOverlay"
      >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/app_name"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue">

            <android.support.design.widget.TabItem
                android:id="@+id/tiRecordIntake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_intake" />


            <android.support.design.widget.TabItem
                android:id="@+id/tiReportLeak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_leak" />

            <android.support.design.widget.TabItem
                android:id="@+id/tiTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_text_2" />

            <android.support.design.widget.TabItem
                android:id="@+id/tiItemTrend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_trend" />

            <!--<android.support.design.widget.TabItem-->
                <!--android:id="@+id/tiEditProfile"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/edit_profile" />-->

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >


    </android.support.v4.view.ViewPager>

</android.support.design.widget.CoordinatorLayout>
