<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgViewLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/report" />

    <TextView
        android:id="@+id/txtViewHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imgViewLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-68dp"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:text="@string/report_leak_instruct"
        android:textAlignment="center"
        android:textSize="18sp" />

</RelativeLayout>